--- a/views/gallery.html
+++ b/views/gallery.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Galeria | Nora En Pure</title>
+
+        <meta name="description" content="Sitio oficial de Nora En Pure, una de las lideres mundiales en Deep House. Encuentre las mejores capturas de Nora En Pure en vivo y vea sus videoclips más recientes.">
+        <meta name="keywords" content="fotos, videos, fotos de nora en pure, videoclips nora en pure, nora en pure, purified, melodic deep house, chill music, deep house, dj podcast">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -15,12 +19,12 @@
         <header class="header">
             <div class="header__logoContainer">
                 <a href="./index.html">
-                    <img src="../images/noraenpure_logo_black.png" alt="Logo" class="header__logo">
+                    <img src="../images/noraenpure_logo_black.png" alt="Logo de Nora En Pure." class="header__logo">
                 </a>
             </div>
             <div class="header__icoMenuMobile">
                 <a href="javascript:void(0);" onclick="myFunction()">
-                    <img src="../images/icons/ico_mobile_menu.png" alt="Menu mobile">
+                    <img src="../images/icons/ico_mobile_menu.png" alt="Icono de menu mobile.">
                 </a>
             </div>
             <nav class="header__navMobile" id="navMobile">
@@ -52,98 +56,98 @@
             <section class="galleryPhotos container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h2 class="galleryPhotos__title">Photos</h2>
+                        <h1 class="galleryPhotos__title">Photos</h1>
                     </div>
                 </div>
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6">
                     <div class="col">
                         <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini001.png" alt="Foto 1">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini001.png" alt="Nora En Pure sonriendo, con el público a sus espaldas.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini002.png" alt="Foto 2">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini002.png" alt="Nora En Pure en un festival, posando frente a una vuelta al mundo, mirando hacia la derecha con los brazos abiertos.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini003.png" alt="Foto 3">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini003.png" alt="Nora en Pure durante un show en vivo.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini004.png" alt="Foto 4">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini004.png" alt="Nora en Pure durante un show en vivo, mirando hacia el público.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini005.png" alt="Foto 5">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini005.png" alt="Vista panoramica del escenario con iluminación azul, durante una presentación de Nora En Pure.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini006.png" alt="Foto 6">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini006.png" alt="Vista panoramica del escenario con iluminación roja y blanca, durante una presentación de Nora En Pure.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini007.png" alt="Foto 7">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini007.png" alt="Nora En Pure en el escenario, tocando el piano durante una presentación en vivo.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini008.png" alt="Foto 8">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini008.png" alt="Nora En Pure mezclando durante un show en vivo.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini009.png" alt="Foto 9">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini009.png" alt="Vista panoramica del escenario, durante una presentación de Nora En Pure en Coachella.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini010.png" alt="Foto 10">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini010.png" alt="Vista panoramica del escenario, durante una presentación de Nora En Pure en Ultra Music Festival Miami.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini011.png" alt="Foto 11">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini011.png" alt="Nora En Pure de espaldas, mezclando durante un presentación en vivo en Ultra Music Festival Miami.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini012.png" alt="Foto 12">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini012.png" alt="Nora En Pure posando junto a Roger Federer, ambos sosteniendo una copa en sus manos.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini013.png" alt="Foto 13">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini013.png" alt="Nora En Pure de espaldas, mezclando durante un presentación en vivo en Ultra Music Festival Miami.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini014.png" alt="Foto 14">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini014.png" alt="Nora En Pure de espaldas, mezclando durante un presentación en vivo.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini015.png" alt="Foto 15">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini015.png" alt="Nora En Pure mezclando durante una presentación en vivo.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini016.png" alt="Foto 16">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini016.png" alt="Efectos de CO2 en el escenario durante una presentación de Nora En Pure.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini017.png" alt="Foto 17">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini017.png" alt="Vista panoramica del público durante una presentación de Nora en Pure en el Ultra Music Festival Miami.">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini018.png" alt="Foto 18">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini018.png" alt="Nora En Pure mirando sonriente a la camara durante una presentación en vivo.">
                         </a>
                     </div>
                 </div>
@@ -172,28 +176,28 @@
             </div>
     
             <footer class="footer">
-                <img class="footer__logoFooter" src="../images/noraenpure_logo_big.png" alt="Logo">
+                <img class="footer__logoFooter" src="../images/noraenpure_logo_big.png" alt="Logo de Nora En Pure.">
                 <p class="footer__copyrightText">Copyright © 2021 / Sebastian Aranda</p>
                 <div class="footer__socialMediaContainer">
                     <a target="_blank" href="https://www.facebook.com/NoraEnPure/">
-                        <img src="../images/icons/fb_gray.png" alt="">
+                        <img src="../images/icons/fb_gray.png" alt="Icono de Facebook.">
                     </a>
                     <a target="_blank" href="https://www.instagram.com/noraenpure/">
-                        <img src="../images/icons/ig_gray.png" alt="">
+                        <img src="../images/icons/ig_gray.png" alt="Icono de Instagram.">
                     </a>
                     <a target="_blank" href="https://twitter.com/NoraEnPure">
-                        <img src="../images/icons/tw_gray.png" alt="">
+                        <img src="../images/icons/tw_gray.png" alt="Icono de Twitter.">
                     </a>
                     <a target="_blank" href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
-                        <img src="../images/icons/yt_gray.png" alt="">
+                        <img src="../images/icons/yt_gray.png" alt="Icono de YouTube.">
                     </a>
                     <a target="_blank" href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
-                        <img src="../images/icons/sp_gray.png" alt="">
+                        <img src="../images/icons/sp_gray.png" alt="Icono de Spotify.">
                     </a>
                 </div>
                 <div class="footer__upArrow">
                     <a href="#topPage">
-                        <img src="../images/icons/up_arrow.png" alt="Icono para subir">
+                        <img src="../images/icons/up_arrow.png" alt="Icono de flecha para ir a la parte superir de la pagina.">
                     </a>
                 </div>
             </footer>
