--- a/views/tour.html
+++ b/views/tour.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tour | Nora En Pure</title>
+
+        <meta name="description" content="Sitio oficial de Nora En Pure. Encuentre todas las novedades y fechas del tour.">
+        <meta name="keywords" content="fechas, show en vivo, tour, nora en pure, purified, melodic deep house, chill music, deep house, dj podcast">
+
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/style.css">
@@ -14,12 +18,12 @@
         <header class="header">
             <div class="header__logoContainer">
                 <a href="./index.html">
-                    <img src="../images/noraenpure_logo_black.png" alt="Logo" class="header__logo">
+                    <img src="../images/noraenpure_logo_black.png" alt="Logo de Nora En Pure." class="header__logo">
                 </a>
             </div>
             <div class="header__icoMenuMobile">
                 <a href="javascript:void(0);" onclick="myFunction()">
-                    <img src="../images/icons/ico_mobile_menu.png" alt="Menu mobile">
+                    <img src="../images/icons/ico_mobile_menu.png" alt="Icono de menu mobile.">
                 </a>
             </div>
             <nav class="header__navMobile" id="navMobile">
@@ -45,11 +49,11 @@
         <div class="gridTour">
             
             <section class="banner">
-                <img class="banner__bannerImg" src="../images/banners/banner01.jpg" alt="Imagen de portada">
+                <img class="banner__bannerImg" src="../images/banners/banner01.jpg" alt="Nora En Pure sonriendo, con el público a sus espaldas.">
             </section>
 
             <section class="sectionTour">
-                <h2 class="tituloSeccion">Tour dates</h2>
+                <h1 class="tituloSeccion">Tour dates</h1>
                 <table class="tourTable">
                     <tr>
                         <td class="tourTable__numeroTourDate">16</td>
@@ -61,10 +65,10 @@
                         <td class="tourTable__nombreEventoTourDate">Sunbar Tempe - Tempe, AZ</td>
                         <td class="tourTable__buyTicket">
                             <a class="tourTable__buyDesktop" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
-                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                                <img src="../images/icons/ico_buy.png" alt="Icono de compra.">Buy tickets
                             </a>
                             <a class="tourTable__icoTicketMobile" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
-                                <img src="../images/icons/ticket.png" alt="ticket">
+                                <img src="../images/icons/ticket.png" alt="Icono de compra.">
                             </a>
                         </td>
                     </tr>
@@ -78,10 +82,10 @@
                         <td class="tourTable__nombreEventoTourDate">The Cuban Club - Tampa, FL</td>
                         <td class="tourTable__buyTicket">
                             <a class="tourTable__buyDesktop" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
-                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                                <img src="../images/icons/ico_buy.png" alt="Icono de compra.">Buy tickets
                             </a>
                             <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
-                                <img src="../images/icons/ticket.png" alt="ticket">
+                                <img src="../images/icons/ticket.png" alt="Icono de compra.">
                             </a>
                         </td>
                     </tr>
@@ -95,10 +99,10 @@
                         <td class="tourTable__nombreEventoTourDate">Praia da Rocha - Portimão, Portugal</td>
                         <td class="tourTable__buyTicket">
                             <a class="tourTable__buyDesktop" target="_blank" href="https://www.festicket.com/festivals/electric-daisy-carnival-edc-europe/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
-                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                                <img src="../images/icons/ico_buy.png" alt="Icono de compra.">Buy tickets
                             </a>
                             <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.festicket.com/festivals/electric-daisy-carnival-edc-europe/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
-                                <img src="../images/icons/ticket.png" alt="ticket">
+                                <img src="../images/icons/ticket.png" alt="Icono de compra.">
                             </a>
                         </td>
                     </tr>
@@ -112,10 +116,10 @@
                         <td class="tourTable__nombreEventoTourDate">Airbeat One Festival 2020 - Neustadt-glewe, Germany</td>
                         <td class="tourTable__buyTicket">
                             <a class="tourTable__buyDesktop" target="_blank" href="https://www.festicket.com/festivals/airbeat-one-festival/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
-                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                                <img src="../images/icons/ico_buy.png" alt="Icono de compra.">Buy tickets
                             </a>
                             <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.festicket.com/festivals/airbeat-one-festival/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
-                                <img src="../images/icons/ticket.png" alt="ticket">
+                                <img src="../images/icons/ticket.png" alt="Icono de compra.">
                             </a>
                         </td>
                     </tr>
@@ -129,10 +133,10 @@
                         <td class="tourTable__nombreEventoTourDate">The Brooklyn Mirage - Brooklyn, NY</td>
                         <td class="tourTable__buyTicket">
                             <a class="tourTable__buyDesktop" target="_blank" href="https://www.eventbrite.com/e/nora-en-pure-purified-tickets-94697664263?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1020702675">
-                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                                <img src="../images/icons/ico_buy.png" alt="Icono de compra.">Buy tickets
                             </a>
                             <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.eventbrite.com/e/nora-en-pure-purified-tickets-94697664263?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1020702675">
-                                <img src="../images/icons/ticket.png" alt="ticket">
+                                <img src="../images/icons/ticket.png" alt="Icono de compra.">
                             </a>
                         </td>
                     </tr>
@@ -146,10 +150,10 @@
                         <td class="tourTable__nombreEventoTourDate">SeatGeek Stadium - Bridgeview, IL</td>
                         <td class="tourTable__buyTicket">
                             <a class="tourTable__buyDesktop" target="_blank" href="https://wl.seetickets.us/event/North-Coast-Music-Festival-2021/421067?afflky=NorthCoastMusicFestival">
-                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                                <img src="../images/icons/ico_buy.png" alt="Icono de compra.">Buy tickets
                             </a>
                             <a class="tourTable__icoTicketMobile" target="_blank" href="https://wl.seetickets.us/event/North-Coast-Music-Festival-2021/421067?afflky=NorthCoastMusicFestival">
-                                <img src="../images/icons/ticket.png" alt="ticket">
+                                <img src="../images/icons/ticket.png" alt="Icono de compra.">
                             </a>
                         </td>
                     </tr>
@@ -163,10 +167,10 @@
                         <td class="tourTable__nombreEventoTourDate">Ogden Theatre - Denver, CO</td>
                         <td class="tourTable__buyTicket">
                             <a class="tourTable__buyDesktop" target="_blank" href="https://www.axs.com/events/390122/nora-en-pure-tickets?cid=usaffbandsintown&aff=usaffbandsintown">
-                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                                <img src="../images/icons/ico_buy.png" alt="Icono de compra.">Buy tickets
                             </a>
                             <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.axs.com/events/390122/nora-en-pure-tickets?cid=usaffbandsintown&aff=usaffbandsintown">
-                                <img src="../images/icons/ticket.png" alt="ticket">
+                                <img src="../images/icons/ticket.png" alt="Icono de compra.">
                             </a>
                         </td>
                     </tr>
@@ -176,28 +180,28 @@
             </section>
 
             <footer class="footer">
-                <img class="footer__logoFooter" src="../images/noraenpure_logo_big.png" alt="Logo">
+                <img class="footer__logoFooter" src="../images/noraenpure_logo_big.png" alt="Logo de Nora En Pure.">
                 <p class="footer__copyrightText">Copyright © 2021 / Sebastian Aranda</p>
                 <div class="footer__socialMediaContainer">
                     <a target="_blank" href="https://www.facebook.com/NoraEnPure/">
-                        <img src="../images/icons/fb_gray.png" alt="">
+                        <img src="../images/icons/fb_gray.png" alt="Icono de Facebook.">
                     </a>
                     <a target="_blank" href="https://www.instagram.com/noraenpure/">
-                        <img src="../images/icons/ig_gray.png" alt="">
+                        <img src="../images/icons/ig_gray.png" alt="Icono de Instagram.">
                     </a>
                     <a target="_blank" href="https://twitter.com/NoraEnPure">
-                        <img src="../images/icons/tw_gray.png" alt="">
+                        <img src="../images/icons/tw_gray.png" alt="Icono de Twitter.">
                     </a>
                     <a target="_blank" href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
-                        <img src="../images/icons/yt_gray.png" alt="">
+                        <img src="../images/icons/yt_gray.png" alt="Icono de Youtube.">
                     </a>
                     <a target="_blank" href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
-                        <img src="../images/icons/sp_gray.png" alt="">
+                        <img src="../images/icons/sp_gray.png" alt="Icono de Spotify.">
                     </a>
                 </div>
                 <div class="footer__upArrow">
                     <a href="#topPage">
-                        <img src="../images/icons/up_arrow.png" alt="Icono para subir">
+                        <img src="../images/icons/up_arrow.png" alt="Icono de flecha para ir a la parte superir de la pagina.">
                     </a>
                 </div>
             </footer>
