--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,10 @@ ul {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto 430px auto auto 313px;
+  grid-template-rows: auto auto 430px auto auto 313px;
   column-gap: 20px;
   margin-top: 100px;
-  grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "tour tour tour tour tour tour tour tour tour tour tour tour" "music music music music music music music music music music music music" "gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
+  grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "bio bio bio bio bio bio bio bio bio bio bio bio" "tour tour tour tour tour tour tour tour tour tour tour tour" "music music music music music music music music music music music music" "gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
 
 .header {
   width: 100%;
@@ -138,12 +138,33 @@ ul {
   .footer__upArrow {
     grid-area: upArrow; }
 
+.bio {
+  grid-area: bio;
+  grid-column-end: 12;
+  margin-bottom: 30px; }
+  .bio__photo {
+    max-width: 80%;
+    margin: auto;
+    margin-top: 130px; }
+  .bio__titulo--normal {
+    font-weight: 400;
+    color: #333333; }
+  .bio__texto {
+    font-family: Poppins;
+    font-weight: 400;
+    color: #000000;
+    font-size: 14px; }
+    .bio__texto--italic {
+      font-style: italic; }
+    .bio__texto--bold {
+      font-weight: 600; }
+
 .sectionTour {
   background-color: #FFFFFF;
   grid-column-start: 2;
   grid-column-end: 12; }
 
-.tituloSeccion, .sectionMusicHome__title--margin, .sectionGalleryHome__title--margin, .galleryPhotos__title, .galleryVideos__title, .releasesAndSpotify__title, .discography__title, .containerContact__title {
+.tituloSeccion, .bio__titulo, .sectionMusicHome__title--margin, .sectionGalleryHome__title--margin, .galleryPhotos__title, .galleryVideos__title, .releasesAndSpotify__title, .discography__title, .containerContact__title {
   font-family: Poppins;
   font-style: normal;
   color: #000000;
@@ -326,7 +347,7 @@ ul {
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify" "discography discography discography discography discography discography discography discography discography discography discography discography" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
 
-.sectionDiscography .tituloSeccion, .sectionDiscography .sectionMusicHome__title--margin, .sectionDiscography .sectionGalleryHome__title--margin, .sectionDiscography .galleryPhotos__title, .sectionDiscography .galleryVideos__title, .sectionDiscography .releasesAndSpotify__title, .sectionDiscography .discography__title, .sectionDiscography .containerContact__title {
+.sectionDiscography .tituloSeccion, .sectionDiscography .bio__titulo, .sectionDiscography .sectionMusicHome__title--margin, .sectionDiscography .sectionGalleryHome__title--margin, .sectionDiscography .galleryPhotos__title, .sectionDiscography .galleryVideos__title, .sectionDiscography .releasesAndSpotify__title, .sectionDiscography .discography__title, .sectionDiscography .containerContact__title {
   grid-area: title;
   margin-bottom: 28px; }
 
@@ -451,7 +472,14 @@ form label {
 
 @media only screen and (max-width: 768px) {
   .mainGrid {
-    grid-template-rows: auto auto auto auto 313px; }
+    grid-template-rows: auto auto auto auto auto 313px; }
+  .bio {
+    grid-column-start: 2; }
+    .bio__photo {
+      margin-top: 12px; }
+    .bio__titulo {
+      margin-top: 20px;
+      margin-bottom: 20px; }
   .header {
     grid-template-areas: "nav nav nav nav logo logo logo logo empty empty empty empty";
     justify-items: center; }
@@ -563,11 +591,19 @@ form label {
       grid-area: nav; }
   .mainGrid {
     grid-template-columns: repeat(8, 1fr);
-    grid-template-areas: "banner banner banner banner banner banner banner banner" "tour tour tour tour tour tour tour tour" "music music music music music music music music" "gallery gallery gallery gallery gallery gallery gallery gallery" "footer footer footer footer footer footer footer footer";
+    grid-template-areas: "banner banner banner banner banner banner banner banner" "bio bio bio bio bio bio bio bio" "tour tour tour tour tour tour tour tour" "music music music music music music music music" "gallery gallery gallery gallery gallery gallery gallery gallery" "footer footer footer footer footer footer footer footer";
     column-gap: 10px; }
+  .bio {
+    grid-area: bio;
+    grid-column-start: 2;
+    grid-column-end: 8; }
+    .bio__titulo {
+      font-size: 30px; }
+    .bio__texto {
+      text-align: justify; }
   .sectionTour {
     grid-area: tour; }
-  .sectionTour .tituloSeccion, .sectionTour .sectionMusicHome__title--margin, .sectionTour .sectionGalleryHome__title--margin, .sectionTour .galleryPhotos__title, .sectionTour .galleryVideos__title, .sectionTour .releasesAndSpotify__title, .sectionTour .discography__title, .sectionTour .containerContact__title {
+  .sectionTour .tituloSeccion, .sectionTour .bio__titulo, .sectionTour .sectionMusicHome__title--margin, .sectionTour .sectionGalleryHome__title--margin, .sectionTour .galleryPhotos__title, .sectionTour .galleryVideos__title, .sectionTour .releasesAndSpotify__title, .sectionTour .discography__title, .sectionTour .containerContact__title {
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 10%; }
