--- a/views/contact.html
+++ b/views/contact.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contacto | Nora En Pure</title>
+
+        <meta name="description" content="Sitio oficial de Nora En Pure, una de las lideres mundiales en Deep House. Conecte con el artista y obtenga información sobre contrataciones.">
+        <meta name="keywords" content="contacto, redes sociales, contrataciones, contratar nora en pure, purified, melodic deep house, chill music, deep house, dj podcast">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -15,12 +19,12 @@
         <header class="header">
             <div class="header__logoContainer">
                 <a href="./index.html">
-                    <img src="../images/noraenpure_logo_black.png" alt="Logo" class="header__logo">
+                    <img src="../images/noraenpure_logo_black.png" alt="Logo de Nora En Pure." class="header__logo">
                 </a>
             </div>
             <div class="header__icoMenuMobile">
                 <a href="javascript:void(0);" onclick="myFunction()">
-                    <img src="../images/icons/ico_mobile_menu.png" alt="Menu mobile">
+                    <img src="../images/icons/ico_mobile_menu.png" alt="Icono de menu mobile.">
                 </a>
             </div>
             <nav class="header__navMobile" id="navMobile">
@@ -44,7 +48,7 @@
         <div class="gridContact">
 
             <section class="banner">
-                <img class="banner__bannerImg" src="../images/banners/banner04.jpg" alt="Imagen de portada">
+                <img class="banner__bannerImg" src="../images/banners/banner04.jpg" alt="Nora En Pure mirando sonriente a la camara durante una presentación en vivo.">
             </section>
 
             <section class="containerContact container-fluid">
@@ -60,27 +64,27 @@
                                 <div class="row">
                                     <div class="col">
                                         <a target="_blank" href="https://www.facebook.com/NoraEnPure/">
-                                            <img src="../images/icons/fb_black.png" alt="">
+                                            <img src="../images/icons/fb_black.png" alt="Icono de Facebook.">
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a target="_blank" href="https://www.instagram.com/noraenpure/">
-                                            <img src="../images/icons/ig_black.png" alt="">
+                                            <img src="../images/icons/ig_black.png" alt="Icono de Instagram.">
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a target="_blank" href="https://twitter.com/NoraEnPure">
-                                            <img src="../images/icons/tw_black.png" alt="">
+                                            <img src="../images/icons/tw_black.png" alt="Icono de Twitter.">
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a target="_blank" href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
-                                            <img src="../images/icons/yt_black.png" alt="">
+                                            <img src="../images/icons/yt_black.png" alt="Icono de YouTube.">
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a target="_blank" href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
-                                            <img src="../images/icons/sp_black.png" alt="">
+                                            <img src="../images/icons/sp_black.png" alt="Icono de Spotify.">
                                         </a>
                                     </div>
                                 </div>
@@ -88,7 +92,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <h2 class="containerContact__title">Licensing</h2>
+                                <h3 class="containerContact__title">Licensing</h3>
                             </div>
                         </div>
                         <div class="row">
@@ -100,7 +104,7 @@
                     <div class="col-md-7">
                         <div class="row">
                             <div class="col">
-                                <h2 class="containerContact__title">Booking</h2>
+                                <h1 class="containerContact__title">Booking</h1>
                             </div>
                         </div>
                         <div class="row">
@@ -120,7 +124,7 @@
                                             <label for="inputEventLocation">Event Location</label>
                                         </div>
                                         <div class="col-sm-7">
-                                            <select class="form-select" aria-label="Default select example" id="inputEventLocation" >
+                                            <select class="form-select" aria-labelledby="inputEventLocation" id="inputEventLocation">
                                                 <option selected>Seleccione el tipo de evento</option>
                                                 <option value="1">Indoor</option>
                                                 <option value="2">Outdoor</option>
@@ -144,7 +148,7 @@
                                             <label for="inputEventSize">Event Size</label>
                                         </div>
                                         <div class="col-sm-7">
-                                            <select class="form-select" aria-label="Default select example" id="inputEventSize" >
+                                            <select class="form-select" aria-labelledby="inputEventSize" id="inputEventSize">
                                                 <option selected>Seleccione el tamaño del evento</option>
                                                 <option value="1">1 - 500 personas</option>
                                                 <option value="2">501 - 1.000 personas</option>
@@ -252,19 +256,19 @@
                 <p class="footer__copyrightText">Copyright © 2021 / Sebastian Aranda</p>
                 <div class="footer__socialMediaContainer">
                     <a target="_blank" href="https://www.facebook.com/NoraEnPure/">
-                        <img src="../images/icons/fb_gray.png" alt="">
+                        <img src="../images/icons/fb_gray.png" alt="Icono de Facebook.">
                     </a>
                     <a target="_blank" href="https://www.instagram.com/noraenpure/">
-                        <img src="../images/icons/ig_gray.png" alt="">
+                        <img src="../images/icons/ig_gray.png" alt="Icono de Instagram.">
                     </a>
                     <a target="_blank" href="https://twitter.com/NoraEnPure">
-                        <img src="../images/icons/tw_gray.png" alt="">
+                        <img src="../images/icons/tw_gray.png" alt="Icono de Twitter.">
                     </a>
                     <a target="_blank" href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
-                        <img src="../images/icons/yt_gray.png" alt="">
+                        <img src="../images/icons/yt_gray.png" alt="Icono de YouTube.">
                     </a>
                     <a target="_blank" href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
-                        <img src="../images/icons/sp_gray.png" alt="">
+                        <img src="../images/icons/sp_gray.png" alt="Icono de Spotify.">
                     </a>
                 </div>
                 <div class="footer__upArrow">
