--- a/views/music.html
+++ b/views/music.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Musica | Nora En Pure</title>
+        <title>Música | Nora En Pure</title>
+
+        <meta name="description" content="Sitio oficial de Nora En Pure. Encuentre los nuevos lanzamientos y escuche toda la discografía.">
+        <meta name="keywords" content="musica, lanzamientos, track, nora en pure hits, nora en pure, purified, melodic deep house, chill music, deep house, dj podcast">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -15,12 +19,12 @@
         <header class="header">
             <div class="header__logoContainer">
                 <a href="./index.html">
-                    <img src="../images/noraenpure_logo_black.png" alt="Logo" class="header__logo">
+                    <img src="../images/noraenpure_logo_black.png" alt="Logo de Nora En Pure." class="header__logo">
                 </a>
             </div>
             <div class="header__icoMenuMobile">
                 <a href="javascript:void(0);" onclick="myFunction()">
-                    <img src="../images/icons/ico_mobile_menu.png" alt="Menu mobile">
+                    <img src="../images/icons/ico_mobile_menu.png" alt="Icono de menu mobile.">
                 </a>
             </div>
             <nav class="header__navMobile" id="navMobile">
@@ -46,7 +50,7 @@
         <div class="gridMusic">
             
             <section class="banner">
-                <img class="banner__bannerImg" src="../images/banners/banner02.jpg" alt="Imagen de portada">
+                <img class="banner__bannerImg" src="../images/banners/banner02.jpg" alt="Nora En Pure en el escenario tocando el piano durante un concierto.">
             </section>
 
             <section class="releasesAndSpotify container-fluid">
@@ -54,21 +58,21 @@
                     <div class="col">
                         <div class="row">
                             <div class="col">
-                                <h2 class="releasesAndSpotify__title">Last Releases</h2>
+                                <h1 class="releasesAndSpotify__title">Last Releases</h1>
                             </div>
                         </div>
                         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2">
                             <div class="col">
-                                <img class="releasesAndSpotify__cover" src="../images/music/01.jpg" alt="Album 01">
+                                <img class="releasesAndSpotify__cover" src="../images/music/01.jpg" alt="Cover del track Nora En Pure Monsoon.">
                             </div>
                             <div class="col">
-                                <img class="releasesAndSpotify__cover" src="../images/music/02.jpg" alt="Album 02">
+                                <img class="releasesAndSpotify__cover" src="../images/music/02.jpg" alt="Cover del track Nora En Pure Pracht.">
                             </div>
                             <div class="col">
-                                <img class="releasesAndSpotify__cover" src="../images/music/03.jpg" alt="Album 03">
+                                <img class="releasesAndSpotify__cover" src="../images/music/03.jpg" alt="Cover del track Nora En Pure Enchantment.">
                             </div>
                             <div class="col">
-                                <img class="releasesAndSpotify__cover" src="../images/music/04.jpg" alt="Album 04">
+                                <img class="releasesAndSpotify__cover" src="../images/music/04.jpg" alt="Cover del track Nora En Pure Come Away.">
                             </div>
                         </div>
                     </div>
@@ -95,68 +99,68 @@
                 </div>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/07.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/07.jpg" alt="Cover del track Nora en Pure Delta, Bartok.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/08.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/08.jpg" alt="Cover del track Nora En Pure All I Need.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/09.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/09.jpg" alt="Cover del track Nora En Pure In The Air Tonight.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/10.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/10.jpg" alt="Cover del track Nora En Pure Homebound.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/11.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/11.jpg" alt="Cover del track Nora En Pure See The End.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/12.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/12.jpg" alt="Cover del track Nora En Pure Heart Beating.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/13.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/13.jpg" alt="Cover del track Nora En Pure Birthright.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/14.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/14.jpg" alt="Cover del track Nora En Pure Polynesia.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/15.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/15.jpg" alt="Cover del track Nora En Pure Trailblazer.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/16.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/16.jpg" alt="Cover del track Nora En Pure Dont look back.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/17.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/17.jpg" alt="Cover del track Nora En Pure Sphinx.">
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/18.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/18.jpg" alt="Cover del track Nora En Pure Conquer Yosemite.">
                     </div>
                 </div>
                 <br><br>
             </section>
 
             <footer class="footer">
-                <img class="footer__logoFooter" src="../images/noraenpure_logo_big.png" alt="Logo">
+                <img class="footer__logoFooter" src="../images/noraenpure_logo_big.png" alt="Logo de Nora En Pure.">
                 <p class="footer__copyrightText">Copyright © 2021 / Sebastian Aranda</p>
                 <div class="footer__socialMediaContainer">
                     <a target="_blank" href="https://www.facebook.com/NoraEnPure/">
-                        <img src="../images/icons/fb_gray.png" alt="">
+                        <img src="../images/icons/fb_gray.png" alt="Icono de Facebook.">
                     </a>
                     <a target="_blank" href="https://www.instagram.com/noraenpure/">
-                        <img src="../images/icons/ig_gray.png" alt="">
+                        <img src="../images/icons/ig_gray.png" alt="Icono de Instagram.">
                     </a>
                     <a target="_blank" href="https://twitter.com/NoraEnPure">
-                        <img src="../images/icons/tw_gray.png" alt="">
+                        <img src="../images/icons/tw_gray.png" alt="Icono de Twitter.">
                     </a>
                     <a target="_blank" href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
-                        <img src="../images/icons/yt_gray.png" alt="">
+                        <img src="../images/icons/yt_gray.png" alt="Icono de YouTube.">
                     </a>
                     <a target="_blank" href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
-                        <img src="../images/icons/sp_gray.png" alt="">
+                        <img src="../images/icons/sp_gray.png" alt="Icono de Spotify.">
                     </a>
                 </div>
                 <div class="footer__upArrow">
                     <a href="#topPage">
-                        <img src="../images/icons/up_arrow.png" alt="Icono para subir">
+                        <img src="../images/icons/up_arrow.png" alt="Icono de flecha para ir a la parte superir de la pagina.">
                     </a>
                 </div>
             </footer>
