--- a/views/contact.html
+++ b/views/contact.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contacto | Nora En Pure</title>
 
-        <meta name="description" content="Sitio oficial de Nora En Pure, una de las lideres mundiales en Deep House. Conecte con el artista y obtenga información sobre contrataciones.">
+        <meta name="description" content="Sitio oficial de Nora En Pure. Conecte con el artista y obtenga información sobre contrataciones.">
         <meta name="keywords" content="contacto, redes sociales, contrataciones, contratar nora en pure, purified, melodic deep house, chill music, deep house, dj podcast">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
