Arreglo link en logo y agrego ancla en pagina de contacto

--- a/views/gallery.html
+++ b/views/gallery.html
@@ -18,7 +18,7 @@
     <body>
         <header class="header">
             <div class="header__logoContainer">
-                <a href="./index.html">
+                <a href="../index.html">
                     <img src="../images/noraenpure_logo_black.png" alt="Logo de Nora En Pure." class="header__logo">
                 </a>
             </div>
