--- a/views/contact.html
+++ b/views/contact.html
@@ -18,7 +18,7 @@
     <body>
         <header class="header">
             <div class="header__logoContainer">
-                <a href="./index.html">
+                <a href="../index.html">
                     <img src="../images/noraenpure_logo_black.png" alt="Logo de Nora En Pure." class="header__logo">
                 </a>
             </div>
@@ -45,6 +45,8 @@
             </nav>
         </header>
 
+        <a id="topPage" class="topPageAnchor"></a>
+        
         <div class="gridContact">
 
             <section class="banner">
